--- a/Angular/IndiaTour/src/app/category-sub-category/category-sub-category.component.html
+++ b/Angular/IndiaTour/src/app/category-sub-category/category-sub-category.component.html
@@ -1,5 +1,5 @@
-
-  <head>
+<body>
+  <!-- <head>
     <title>Tour India - Be a Traveler not a Tourist! </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
 	        </ul>
 	      </div>
 	    </div>
-	  </nav>
+	  </nav> -->
     <!-- END nav -->
     
     <div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
@@ -72,7 +72,7 @@
     		
 			
 			<div class="row">
-        <ng-container *ngFor="let cat of categorysubcategories">		
+        <ng-container *ngFor="let cat of a">		
           <div class="col-md-6 col-lg-3 ftco-animate">
               <div class="project">
                 <div class="img">
@@ -189,7 +189,12 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script> -->
-    
+    <script>
+      function onclick()
+      {
+
+      }
+    </script>
   </body>
 
 
