--- a/Angular/IndiaTour/src/app/package-list/package-list.component.html
+++ b/Angular/IndiaTour/src/app/package-list/package-list.component.html
@@ -7,7 +7,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item active"><a href="http://localhost:4200/home" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="tours.html" class="nav-link">Tours</a></li>
 	          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -20,7 +20,7 @@
 	  </nav> 
     <!-- END nav -->
     
-    <div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap js-fullheight" style="background-image: url('assets/images/bg_1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
@@ -44,24 +44,25 @@
     		
 			
 			<div class="row">
-        <ng-container *ngFor="let cat of a">		
+        <ng-container *ngFor="let cat of packageList">		
           <div class="col-md-6 col-lg-3 ftco-animate">
               <div class="project">
                 <div class="img">
                   <img src="{{cat.tourimage}}" class="img-fluid" alt="Colorlib Template">
                 </div>
                 <div class="text">
-                  <h3><a (click)="subcatDisp(cat)" >{{cat.tourname | uppercase}}</a></h3>
+                  <h3><a (click)="Itinerarydisp(cat)" >{{cat.tourname | uppercase}}</a></h3>
                   <div class="star d-flex clearfix">
                     <div class="mr-auto float-left">
-                      <span class="ion-ios-star"></span>
-                      <span class="ion-ios-star"></span>
+                      <span class="ion-ios-star">₹{{cat.tourcost}}</span><br>
+                      <span class="ion-ios-star"></span><br>
+                      <span class="ion-ios-star"></span><br>
                       <span class="ion-ios-star"></span>
                       <span class="ion-ios-star"></span>
                       <span class="ion-ios-star"></span>
                     </div>
                     <div class="float-right">
-                      <span class="rate"><a href="#">(120)</a></span>
+                      <span class="rate"></span>  
                     </div>
                   </div>
                 </div>
