--- a/Angular/IndiaTour/src/app/package-complete-details/package-complete-details.component.html
+++ b/Angular/IndiaTour/src/app/package-complete-details/package-complete-details.component.html
@@ -51,7 +51,8 @@
           </td>
           <td> 
 
-          <form [formGroup]="bookingdatesubmit" (ngSubmit)="onSubmit(bookingdatesubmit)" novalidate>
+          <form [formGroup]="bookForm" (ngSubmit)="bookNow()" novalidate>
+          
             <table border="1" width="500">
                 <tr id="date">
                   <th>Available Dates</th>
@@ -59,7 +60,7 @@
 
               <ng-container *ngFor="let dte of packageList">
                 <tr id="date">                    
-                  <td><input type="radio" name="date" value="{{dte.datepackageid}}">&nbsp;&nbsp;{{dte.startdate | date:'dd/MMM/yyyy'}}</td>
+                  <td><input type="radio" formControlName="date" value="{{dte.datepackageid}}">&nbsp;&nbsp;{{dte.startdate | date:'dd/MMM/yyyy'}}</td>
                 </tr> 
               </ng-container>
 
