--- a/Angular/IndiaTour/src/app/registration/registration.component.html
+++ b/Angular/IndiaTour/src/app/registration/registration.component.html
@@ -7,31 +7,38 @@
       <div class="container">
         <div class="row block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form #form="ngForm" (submit)="onSubmit(form)" class="bg-light p-5 contact-form" method="post">    
+            <form #form="ngForm"  (submit)="onSubmit(form)" class="bg-light p-5 contact-form" method="post">    
 			  <div class="form-group">
-              <h3>New Registration: </h3>
+              <h3>New Registration </h3>
               </div>
               <div class="form-group">
                 <label>Name:</label><input type="text" name="customername" #customername="ngModel" [(ngModel)]="_regservice.customer.customername" class="form-control" placeholder="Your Name">
               </div>
+
               <div class="form-group">
                 <label>Email:</label><input type="text" name="email" #email="ngModel" [(ngModel)]="_regservice.customer.email" class="form-control" placeholder="Your Email">
-              </div>
+                  </div>
+
               <div class="form-group">
                 <label>Password:</label><input type="password" name="password" #password="ngModel" [(ngModel)]="_regservice.customer.password" class="form-control" placeholder="password">
               </div>
+
               <div class="form-group">
                 <label>Address1:</label><textarea name="Address1" #Address1="ngModel" [(ngModel)]="_regservice.customer.Address1" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
               </div>
+
               <div class="form-group">
                 <label>Address2:</label><textarea name="Address2" #Address2="ngModel" [(ngModel)]="_regservice.customer.Address2" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
               </div>
+
               <div class="form-group">
                 <label>City:</label><input type="text" name="city" #city="ngModel" [(ngModel)]="_regservice.customer.city" class="form-control" placeholder="City Name">
               </div>
+
               <div class="form-group">
                 <label>State:</label><input type="text" name="state" #state="ngModel" [(ngModel)]="_regservice.customer.state" class="form-control" placeholder="State Name">
               </div>
+              
               <div class="form-group">
                 <label>Pincode:</label><input type="text" name="pin" #pin="ngModel" [(ngModel)]="_regservice.customer.pin" class="form-control">
               </div>
