--- a/Angular/IndiaTour/src/app/subcategory/subcategory.component.html
+++ b/Angular/IndiaTour/src/app/subcategory/subcategory.component.html
@@ -38,7 +38,7 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">{{title.categoryname}}</h2>
+           <!-- <h2 >{{title.categoryname}}</h2>  -->
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
