--- a/Angular/IndiaTour/src/app/registration/registration.component.html
+++ b/Angular/IndiaTour/src/app/registration/registration.component.html
@@ -53,6 +53,7 @@
               <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary py-3 px-5">
               </div>
+              {{form.email.value}}
             </form>
           </div>
         </div>
