--- a/Angular/IndiaTour/src/app/registration/registration.component.html
+++ b/Angular/IndiaTour/src/app/registration/registration.component.html
@@ -46,7 +46,7 @@
                 <label>Tel No:</label><input type="text" name="telno" #telno="ngModel" [(ngModel)]="_regservice.customer.telno" class="form-control">
               </div>
               <div class="form-group">
-                <label>Mobile No:</label><input type="text" name="mobileno" #mobileno="ngModel" [(ngModel)]="_regservice.customer.mobileno" pattern="[0-9]{10}" class="form-control">
+                <label>Mobile No:</label><input type="text" name="mobileno" #mobileno="ngModel" [(ngModel)]="_regservice.customer.mobileno" class="form-control">
               </div>
 
 
